--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ urlimg: 'https://zacarhay.github.io/feeling-responsive/images/'
 
 
 # Logo size is 600x80 pixels
-logo: "logo.png"
+logo: "logo (1).png"
 
 # Plugins
 plugins:
