--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@
   - title: "PYNQ Community Projects"
     url: "/design/portfolio/"
   - title: "PYNQ"
-    url: "/design/gallery/"
+    url: "/design/page-fullwidth/"
   - title: "Header with image and color"
     url: "/design/header-image-color/"
   - title: "Header Only With Logo"
