--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@
     url: "/design/page-fullwidth/"
   - title: "Header with image and color"
     url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
+  - title: "gal"
+    url: "/design/gallery/"
   - title: "Header With Text"
     url: "/design/header-with-text/"
   - title: "No Header"
