--- a/_data/services.yml
+++ b/_data/services.yml
@@ -4,14 +4,11 @@
   url: "/contact/"
   title: "Contact"
 
-- name: "RSS"
-  url: "/feed.xml"
-  title: "Subscribe to RSS Feed"
+- name: "TUL"
+  url: "https://www.tulembedded.com/FPGA/ProductsPYNQ-Z2.html"
+  title: "See our range of PYNQ boards"
 
-- name: "Atom"
-  url: "/atom.xml"
-  title: "Subscribe to Atom Feed"
+- name: "Xilinx"
+  url: "www.xilinx.com"
+  title: "See the Xilinx Website"
 
-- name: "sitemap.xml"
-  url: "/sitemap.xml"
-  title: "Sitemap for Google Webmaster Tools"
