--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ author: phlow
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'https://zacarhay.github.io'
-baseurl: '/pynq-io'
+baseurl: '/Pynq-io'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
-improve_content: https://zacarhay.github.io/pynq-io/edit/gh-pages
+improve_content: https://zacarhay.github.io/Pynq-io/edit/gh-pages
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash at the end.
@@ -38,7 +38,7 @@ improve_content: https://zacarhay.github.io/pynq-io/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://zacarhay.github.io/pynq-io/images/'
+urlimg: 'https://zacarhay.github.io/Pynq-io/images/'
 
 
 # Logo size is 600x80 pixels
