--- a/_data/services.yml
+++ b/_data/services.yml
@@ -9,6 +9,6 @@
   title: "See our range of PYNQ boards"
 
 - name: "Xilinx"
-  url: "www.xilinx.com"
+  url: "https://www.xilinx.com"
   title: "See the Xilinx Website"
 
