--- a/_data/pynqtut.yml
+++ b/_data/pynqtut.yml
@@ -50,3 +50,13 @@ docs:
   project: Parallel Programming for FPGAs, PYNQ Projects and Labs
   url: https://pp4fpgas.readthedocs.io/
   subtitle: Ryan Kastner, UCSD -
+
+- img:
+  project: 
+  url: 
+  subtitle: 
+
+- img: 
+  project: 
+  url: 
+  subtitle: 
