--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,21 +1,7 @@
-- menu_name: "Dankeschön"
+- menu_name: "Contribute"
 
-- name: "Icons by Daniel Bruce"
-  url: "http://entypo.com/"
+- name: Contribute to the Github!
+  url: "{{ site.github.repository_url }}/blob/master/docs/contributing.md "
   class: "network-entypo"
-  title: "Icons by Daniel Bruce"
+  title: "Contribute to the Github"
 
-- name: "Built on Foundation"
-  url: "http://foundation.zurb.com/"
-  class: "services-newsletter"
-  title: "Built on Foundation"
-
-- name: "Images by Unsplash"
-  url: "http://unsplash.com/"
-  class: "rss-link"
-  title: "Images by Unsplash"
-
-- name: "Using Backstretch by Scott Robbin"
-  url: "http://srobbin.com/jquery-plugins/backstretch/"
-  class: "sitemap-link"
-  title: "Using Backstretch by Scott Robbin"
