--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@
   side: left
 
 - title: Source Code
-  url: https://github.com/xilinx/pynq
+  url: /sourcecode/
   side: left
 
 - title: Support
